--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:8080/api/*",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,8 +14,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.4.0",
+    "history": "^5.3.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
